--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@shopify/react-native-skia": "^1.3.0",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.8",
     "expo-blur": "^13.0.2",
     "expo-constants": "~16.0.1",
@@ -21,15 +23,17 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-component-inview": "^1.0.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
