--- a/package.json
+++ b/package.json
@@ -9,31 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4",
-    "@shopify/react-native-skia": "^1.3.0",
-    "@types/react": "~18.2.79",
-    "expo": "~51.0.8",
-    "expo-blur": "^13.0.2",
-    "expo-constants": "~16.0.1",
+    "@legendapp/state": "^3.0.0-alpha.17",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@shopify/react-native-skia": "^1.3.6",
+    "expo": "~51.0.14",
+    "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.16",
     "expo-status-bar": "~1.12.1",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-component-inview": "^1.0.2",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "^18.2.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
-    "typescript": "~5.3.3"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "3.3.2"
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
