--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "react": "^18.2.0",
     "react-native": "0.74.2",
+    "react-native-auto-size-text": "^1.1.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "lottie-react-native": "6.7.0"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
