--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@shopify/react-native-skia": "^1.3.6",
+    "dayjs": "^1.11.11",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
@@ -22,12 +23,16 @@
     "react": "^18.2.0",
     "react-native": "0.74.2",
     "react-native-auto-size-text": "^1.1.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "react-native-ui-datepicker": "^2.0.3",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
