--- a/package.json
+++ b/package.json
@@ -9,30 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@legendapp/state": "^3.0.0-alpha.17",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@shopify/react-native-skia": "^1.3.6",
-    "dayjs": "^1.11.11",
-    "expo": "~51.0.14",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "dayjs": "^1.11.12",
+    "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "~3.5.20",
     "expo-status-bar": "~1.12.1",
-    "lottie-react-native": "6.7.0",
-    "react": "^18.2.0",
-    "react-native": "0.74.2",
-    "react-native-auto-size-text": "^1.1.1",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-element-dropdown": "^2.12.1",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-mmkv": "^2.12.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
     "react-native-ui-datepicker": "^2.0.3",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
