--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
+    "@shopify/react-native-skia": "^1.3.10",
     "dayjs": "^1.11.12",
     "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
