--- a/package.json
+++ b/package.json
@@ -13,31 +13,33 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
-    "@shopify/react-native-skia": "^1.3.10",
+    "@shopify/react-native-skia": "1.2.3",
     "dayjs": "^1.11.12",
-    "expo": "~51.0.24",
+    "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.20",
+    "expo-router": "~3.5.21",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-auto-size-text": "^1.1.1",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-ui-datepicker": "^2.0.3",
-    "reanimated-color-picker": "^3.0.4"
+    "reanimated-color-picker": "^3.0.4",
+    "@react-native-masked-view/masked-view": "0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
