--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@legendapp/state": "^3.0.0-alpha.29",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -20,6 +21,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-auto-size-text": "^1.1.1",
@@ -31,10 +33,10 @@
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-ui-datepicker": "^2.0.3",
-    "reanimated-color-picker": "^3.0.4",
-    "@react-native-masked-view/masked-view": "0.3.1"
+    "reanimated-color-picker": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
