--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-auto-size-text": "^1.1.1",
+    "react-native-calendars": "^1.1306.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "^2.12.2",
