--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.74.5",
     "react-native-auto-size-text": "^1.1.1",
     "react-native-calendars": "^1.1306.0",
+    "react-native-drop-shadow": "^1.0.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "^2.12.2",
@@ -34,6 +35,9 @@
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-shadow": "^1.2.2",
+    "react-native-shadow-2": "^7.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-ui-datepicker": "^2.0.3",
