--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@react-navigation/native": "^6.1.18",
     "@shopify/react-native-skia": "1.2.3",
     "dayjs": "^1.11.12",
-    "expo": "~51.0.31",
+    "expo": "^51.0.32",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
-    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-auto-size-text": "^1.1.1",
+    "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1306.0",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-element-dropdown": "^2.12.1",
@@ -37,6 +37,7 @@
     "react-native-screens": "3.31.1",
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.1.0",
+    "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
