--- a/package.json
+++ b/package.json
@@ -8,46 +8,36 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@legendapp/state": "^3.0.0-alpha.29",
-    "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.1.18",
-    "@shopify/react-native-skia": "1.2.3",
-    "dayjs": "^1.11.12",
-    "expo": "^51.0.32",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "@legendapp/state": "^3.0.0-beta.19",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/material-top-tabs": "^7.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@shopify/react-native-skia": "^1.7.6",
+    "dayjs": "^1.11.13",
+    "expo": "^52.0.21",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.14",
+    "expo-sqlite": "~15.0.3",
+    "expo-status-bar": "~2.0.0",
+    "react": "^18.3.1",
+    "react-native": "^0.76.5",
     "react-native-auto-size-text": "^1.1.1",
-    "react-native-calendar-strip": "^2.2.6",
-    "react-native-calendars": "^1.1306.0",
-    "react-native-drop-shadow": "^1.0.0",
-    "react-native-element-dropdown": "^2.12.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "^2.12.2",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-shadow": "^1.2.2",
-    "react-native-shadow-2": "^7.1.0",
-    "react-native-slideable-calendar-strip": "^0.4.0",
-    "react-native-svg": "15.2.0",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-ui-datepicker": "^2.0.3",
-    "reanimated-color-picker": "^3.0.4"
+    "react-native-ui-datepicker": "^2.0.4",
+    "reanimated-color-picker": "^3.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
+  }
 }
