--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-ui-datepicker": "^2.0.4",
-    "reanimated-color-picker": "^3.0.6"
+    "reanimated-color-picker": "^3.0.6",
+    "react-native-pager-view": "6.5.1"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
