--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "react": "^18.3.1",
     "react-native": "^0.76.5",
     "react-native-auto-size-text": "^1.1.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-ui-datepicker": "^2.0.4",
-    "reanimated-color-picker": "^3.0.6",
-    "react-native-pager-view": "6.5.1"
+    "reanimated-color-picker": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
