--- a/package.json
+++ b/package.json
@@ -1,45 +1,23 @@
 {
-  "name": "plender",
-  "version": "1.0.0",
-  "main": "expo-router/entry",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@legendapp/state": "^3.0.0-beta.19",
-    "@react-navigation/drawer": "^7.1.1",
-    "@react-navigation/material-top-tabs": "^7.1.0",
-    "@react-navigation/native": "^7.0.14",
-    "@shopify/react-native-skia": "^1.7.6",
+    "@legendapp/state": "^3.0.0-beta.30",
+    "@react-navigation/drawer": "^7.3.11",
+    "@react-navigation/material-top-tabs": "^7.2.12",
+    "@react-navigation/native": "^7.1.8",
+    "@shopify/react-native-skia": "^2.0.0-next.3",
     "dayjs": "^1.11.13",
-    "expo": "^52.0.21",
-    "expo-constants": "~17.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.14",
-    "expo-sqlite": "~15.0.3",
-    "expo-status-bar": "~2.0.0",
-    "react": "^18.3.1",
-    "react-native": "^0.76.5",
+    "expo": "^53.0.8",
+    "expo-sqlite": "^15.2.9",
+    "react": "^19.1.0",
+    "react-native": "^0.79.2",
     "react-native-auto-size-text": "^1.1.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-ui-datepicker": "^2.0.4",
-    "reanimated-color-picker": "^3.0.6"
-  },
-  "devDependencies": {
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "react-native-ui-datepicker": "^3.1.2",
+    "reanimated-color-picker": "^4.0.1"
   }
 }
