--- a/app.json
+++ b/app.json
@@ -27,7 +27,10 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      ["expo-router",
+      {
+        "root": "./app"
+      }],
       "expo-sqlite"
     ]
   }
