--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "plender",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@legendapp/state": "^3.0.0-beta.30",
     "@react-navigation/drawer": "^7.3.11",
@@ -19,5 +31,9 @@
     "react-native-swiper": "^1.6.0",
     "react-native-ui-datepicker": "^3.1.2",
     "reanimated-color-picker": "^4.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   }
 }
