--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "plender",
-  "version": "1.0.0",
+  "name": "plender-styling",
   "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
-    "@legendapp/state": "^3.0.0-beta.19",
-    "@react-navigation/drawer": "^7.1.1",
-    "@react-navigation/material-top-tabs": "^7.1.0",
-    "@react-navigation/native": "^7.0.14",
-    "@shopify/react-native-skia": "^1.7.6",
+    "@expo/vector-icons": "^14.1.0",
+    "@legendapp/state": "^3.0.0-beta.30",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.6",
+    "@shopify/react-native-skia": "^2.0.0",
     "dayjs": "^1.11.13",
-    "expo": "^52.0.21",
-    "expo-constants": "~17.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.14",
-    "expo-sqlite": "~15.0.3",
-    "expo-status-bar": "~2.0.0",
-    "react": "^18.3.1",
-    "react-native": "^0.76.5",
-    "react-native-auto-size-text": "^1.1.1",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-swiper": "^1.6.0",
-    "react-native-ui-datepicker": "^2.0.4",
-    "reanimated-color-picker": "^3.0.6"
+    "expo": "~53.0.9",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.6",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
-  }
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "jest": "^29.2.1",
+    "jest-expo": "~53.0.5",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
+  },
+  "private": true
 }
